@@ -97,8 +97,10 @@ extern float Android_Splitpct;
 extern int Android_Split;
 extern int Android_DerotateKeys;
 extern int Android_Paddle;
+extern int Android_PlanetaryDefense;
 extern SWORD Android_POTX;
 extern SWORD Android_POTY;
+extern SWORD Android_POTLIMIT;
 
 void Android_TouchEvent(int x1, int y1, int s1, int x2, int y2, int s2);
 void Android_KeyEvent(int k, int s);
