@@ -1,3 +1,8 @@
+2012-05-20  Kostas Nakos  <knakos@gmail.com>
+* android/*: Implement Planetary Defense mode, a Koala Pad click-where-I-point
+             mode
+
+
 2012-05-19  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
 * cartridge.[ch], ui.c, atari800.man, DOC/cart.txt, DOC/USAGE: Support for
   2 KB and 4 KB ROMs used in early Atari cartridges.
